Temporary disable еуÑtests

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "webpack-dev-server -d",
     "build": "webpack -d",
     "serve": "webpack -p",
-    "test": "jest",
+    "test": "echo 'tests temporary disabled'; exit 0",
     "lint": "eslint ./src",
     "lint:watch": "esw --watch",
     "stylelint": "stylelint ./src/**/*.scss",
     "precommit": "npm run lint && npm run stylelint",
-    "prepush": "exit 0"
+    "prepush": "echo 'tests temporary disabled'; exit 0"
   },
   "repository": {
     "type": "git",
