--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "tic-tac-toe",
   "version": "1.0.0",
+  "engines": {
+    "node": "^8 || ^10"
+  },
   "description": "This is a Tic-Tac-Toe game, written in pure javascript",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
+    "deploy": "npm run build && npm run start",
+    "start": "node index.js",
     "dev": "webpack-dev-server -d",
     "build": "webpack -d",
     "serve": "webpack -p",
@@ -37,6 +42,7 @@
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
+    "nodemon": "^1.18.6",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.23.1",
@@ -45,6 +51,11 @@
     "stylelint-scss": "^3.3.2",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "workbox-webpack-plugin": "^3.6.3"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "socket.io": "^2.1.1"
   }
 }
