Change travis mode build to production

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
   - npm run lint
   - npm run stylelint
   - npm run test
-  - npm run build
+  - npm run serve
   
 deploy:
   provider: pages
