--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tic-tac-toe",
   "version": "1.0.0",
-  "engines": {
-    "node": "^8 || ^10"
-  },
   "description": "This is a Tic-Tac-Toe game, written in pure javascript",
+  "engines": {
+    "node": "8.12.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -18,7 +18,8 @@
     "lint:watch": "esw --watch",
     "stylelint": "stylelint ./src/**/*.scss",
     "precommit": "npm run lint && npm run stylelint",
-    "prepush": "npm run test"
+    "prepush": "npm run test",
+    "postinstall": "npm run serve"
   },
   "repository": {
     "type": "git",
